Complete version with a little bit of css

--- a/index.html
+++ b/index.html
@@ -4,16 +4,27 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
-	<link rel="stylesheet" href="=style.css"/>
+	<link rel="stylesheet" href="style.css"/>
 </head>
 <body>
+
+	<div class="header">
+<h1> Rock-Paper-Scissors</h1>
+</div>
+
+<div class="results">
+<div id="result"></div>
+</div>
+
+<div class=" weapons">
 	<div style="margin-bottom: 20px">
-		<input type="button" value="rock" id = "rockButton"></input>
-		<input type="button" value="paper" id = "paperButton"></input>
-		<input type="button" value="scissors" id = scissorsButton></input>
-	      </div>
-	      <div id="result"></div>
-	      <script src="script.js"></script>
+		<input type="button" value="Rock" id="rocky">
+		<input type="button" value="Paper" id="papery">
+		<input type="button" value="Scissors" id="scissorsy">
+	    </div>
+	 
+	</div>
+	    <script src="script.js"></script>
 
 
 
